# labelGeneratorPlugin

./: .gitignore  CMakeLists.txt  README.md
include/: b.h  c.h  labelGeneratorBase.h
src/: b.cpp  c.cpp  gpsLabelGenerator.cpp
test/: main.cpp
